ChangeLog for Creandus

2006-09-22 Mike Kelly <pioto@gentoo.org>

	* doc/API_flowchart.dia, doc/API_flowchart.png,
	doc/API_flowchart2.dia, doc/API_flowchart2.png: Update the flowcharts
	to say "creandus" instead of "dynusers".

	* ChangeLog: Clean up a bit.

2006-09-22 Mike Kelly <pioto@gentoo.org>

	* eselect/Makefile.am, doc/Makefile.am, bash/auth/Makefile.am,
	bash/common/Makefile.am, bash/Makefile.am: Beautify the DOSED stuff a
	bit.

2006-09-22 Mike Kelly <pioto@gentoo.org>

	* docs/datafiles.txt, bash/common/read_groupdata.bash.in,
	bash/common/read_userdata.bash.in: Switch the default settings file to
	be called PROFILEDIR/accounts/defaults, and update documentation to
	reflect this change.

2006-09-07 Mike Kelly <pioto@gentoo.org>

	* NEWS: Prepare for 0.5.0.

	+ Release: 0.5.0

2006-09-07 Mike Kelly <pioto@gentoo.org>

	* doc/: Restructure documentation.

2006-09-07 Mike Kelly <pioto@gentoo.org>

	* bash/common/Makefile.am: Whoops, forgot to add get_profiledirs.bash.

2006-09-07 Mike Kelly <pioto@gentoo.org>

	* configure.ac, doc/Makefile.am, Makefile.am: Update rules a bit for
	making docs.

2006-09-07 Mike Kelly <pioto@gentoo.org>

	* bash/common/read_groupdata.bash.in,
	bash/common/read_userdata.bash.in,
	bash/common/get_profiledirs.bash.in: Add support for reading our data
	from cascading portage profiles, rather than just
	/var/lib/dynusers/data.

2006-08-27 Mike Kelly <pioto@gentoo.org>

	* bash/db.bash.in, eselect/users.eselect.in: Clean up the code that
	loops over the database files.

	* bash/adduser.bash.in: Fix a typo.

2006-08-23 Mike Kelly <pioto@gentoo.org>

	* bash/adduser.bash.in, bash/addgroup.bash.in: Add a check in the free
	uid/gid search step to find out if we already have the user or group
	with a uid/gid in the requested range. If so, we want to continue to
	use that uid/gid.

2006-08-23 Mike Kelly <pioto@gentoo.org>

	* bash/db.bash.in: Error in my logic, should use && where I was using
	||.
