@@ -10,7 +10,7 @@ commonbackend_DATA = \
 
 # Some basic sanity checks.
 TESTS_ENVIRONMENT = env \
-	SCRIPTDIR="$(top_builddir)/bash/" \
+	CREANDUS_SCRIPTDIR="$(top_builddir)/bash/" \
 	bash $(top_srcdir)/tools/run_test.bash
 TESTS = getent_TEST.bash die_TEST.bash
 XFAIL_TESTS = die_TEST.bash
@@ -27,7 +27,7 @@ dosed=@SED@ \
 	-e 's,\@SED\@,@SED@,g' \
 	-e 's,\@BASH\@,@BASH@,g' \
 	-e 's,\@PACKAGE\@,@PACKAGE@,g' \
-	-e 's,\@SCRIPTDIR\@,@SCRIPTDIR@,g' \
+	-e 's,\@CREANDUS_SCRIPTDIR\@,@CREANDUS_SCRIPTDIR@,g' \
 	-e 's,\@localstatedir\@,@localstatedir@,g' \
 	-e 's,\@sysconfdir\@,@sysconfdir@,g'
 
